--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Base application theme -->
     <style name="Base.Theme.Fina" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-<<<<<<< HEAD
+        <!-- Customize your theme colors -->
         <item name="android:colorBackground">#000000</item>
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="android:textColor">#FFFFFF</item> <!-- Make text white -->
-
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="Theme.Fina" parent="Base.Theme.Fina" />
 </resources>
-=======
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
-
-    <style name="Theme.Fina" parent="Base.Theme.Fina" />
-</resources>
->>>>>>> origin/main
